--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,10 @@ jobs:
         
       - name: Build
         run: npm run build
+        env:
+          VITE_SHOPIFY_DOMAIN: ${{ secrets.VITE_SHOPIFY_DOMAIN }}
+          VITE_SHOPIFY_STOREFRONT_ACCESS_TOKEN: ${{ secrets.VITE_SHOPIFY_STOREFRONT_ACCESS_TOKEN }}
+          VITE_WEB3FORMS_ACCESS_KEY: ${{ secrets.VITE_WEB3FORMS_ACCESS_KEY }}
         
       - name: Setup Pages
         uses: actions/configure-pages@v4
